package com.binod.notification.model;

public enum NotificationType {
    TRANSACTIONAL,
    PROMOTIONAL,
    CRITICAL
}