package com.binod.notification.strategy;

public interface RetryStrategy {
    int getRetryCount();
}